--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rhtimes-client",
+  "name": "hrtimes-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,19 +7,21 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "cloudinary": "^1.26.3",
-    "multer": "^1.4.2",
+    "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
+    "npm": "^7.21.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-hook-form": "^7.12.2",
+    "react-hook-form": "^7.13.0",
     "react-lottie": "^1.2.3",
-    "react-material-ui-carousel": "^2.2.7",
+    "react-material-ui-carousel": "^2.3.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.3",
     "react-scroll-up": "^1.3.7",
     "react-select": "^4.3.1",
     "semantic-ui-css": "^2.4.1",
